Change serdes and converters defaults to use contentId and 4 byte identifiers